@@ -547,12 +547,22 @@
                      },
                      {
                         "class" : "Pod::Weaver::Section::Collect",
+                        "name" : "@A:KNL/@A:KNL:Collectors/Collect.function",
+                        "version" : "4.006"
+                     },
+                     {
+                        "class" : "Pod::Weaver::Section::Collect",
                         "name" : "@A:KNL/@A:KNL:Collectors/Collect.attr",
                         "version" : "4.006"
                      },
                      {
                         "class" : "Pod::Weaver::Section::Collect",
                         "name" : "@A:KNL/@A:KNL:Collectors/Collect.method",
+                        "version" : "4.006"
+                     },
+                     {
+                        "class" : "Pod::Weaver::Section::Collect",
+                        "name" : "@A:KNL/@A:KNL:Collectors/Collect.pfunction",
                         "version" : "4.006"
                      },
                      {
