@@ -384,11 +384,19 @@ x_Dist_Zilla:
               version: '4.006'
             -
               class: Pod::Weaver::Section::Collect
+              name: '@A:KNL/@A:KNL:Collectors/Collect.function'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Collect
               name: '@A:KNL/@A:KNL:Collectors/Collect.attr'
               version: '4.006'
             -
               class: Pod::Weaver::Section::Collect
               name: '@A:KNL/@A:KNL:Collectors/Collect.method'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Collect
+              name: '@A:KNL/@A:KNL:Collectors/Collect.pfunction'
               version: '4.006'
             -
               class: Pod::Weaver::Section::Collect
